# summit-stats

./: .gitignore  README.md  docker-compose.yml  mise.toml
.github/workflows/: push-image.yml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-0a61337c9fb336fd347c16bd38fa18110ad0ebce4d6e86e0b072aeca098a5566.json  query-9776e15503d6866df51776f140290c0743c78291bfdcafcd7a039ac2974f34c9.json  query-fc982d070ffbf4c3decb4282912367c4f28e9b15674f533214877c83b1c04e2b.json
backend/migrations/: 20250927182801_create_tokens_table.sql
backend/src/: main.rs
backend/src/extractors/: current_user.rs  mod.rs  strava.rs
backend/src/models/api/: auth.rs
backend/src/models/db/: user.rs
backend/src/routes/: analyse.rs  auth.rs  me.rs  mod.rs
backend/src/utilities/: strava.rs
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/hooks/: useActivites.tsx  useAthlete.tsx
frontend/src/components/: ActivitiesTable.tsx  AthleteCard.tsx  ClientProvider.tsx  DistancePlot.tsx  Footer.tsx  NavBar.tsx  NavbarWrapper.tsx  PaginatedTable.tsx  Table.tsx
frontend/src/hooks/: useActivites.tsx  useAthlete.tsx  useAuth.tsx
iac/: artifact_registry.tf  backend.tf  ci.tf  database.tf  github_secrets.tf  main.tf  secret_manager.tf  variables.tf
