[package]
name = "strava_analyser"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.226", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.145"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros", "uuid", "chrono" ] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
strava-wrapper = "0.0.2"
chrono = "0.4.42"
async-trait = "0.1.89"
http = "1.3.1"
hyper = "1.7.0"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
